# AndroidNotes

./: README.md
ASMLifeCycleDemo/: build.gradle
ASMLifeCycleDemo/app/: build.gradle
ASMLifeCycleDemo/app/src/main/: AndroidManifest.xml
ASMLifeCycleDemo/asm_lifecycle_plugin/: build.gradle
ASMLifeCycleDemo/gradle/wrapper/: gradle-wrapper.properties
FaceRecognition/: settings.gradle
FaceRecognition/app/: build.gradle
FaceRecognition/app/src/main/: AndroidManifest.xml
FaceRecognition/attendancelibrary/: build.gradle
FaceRecognition/facelibrary/: build.gradle
FaceRecognition/gradle/wrapper/: gradle-wrapper.properties
FaceRecognition/registerlibrary/: build.gradle
TimeLineDemo/app/: build.gradle
TimeLineDemo/gradle/wrapper/: gradle-wrapper.properties
lib/JavaLib/: build.gradle  settings.gradle
lib/JavaLib/app/: build.gradle
lib/JavaLib/commonlib/: build.gradle
lib/JavaLib/lib_compiler/: build.gradle
lib/NativeDemo/app/: build.gradle
lib/ToolLib/: build.gradle  settings.gradle
lib/ToolLib/app/: build.gradle
lib/ToolLib/hilt/: build.gradle
lib/jnidemo/: settings.gradle
lib/jnidemo/app/: CMakeLists.txt  build.gradle
lib/jnidemo/app/src/androidTest/java/com/neoqee/jnidemo/: ExampleInstrumentedTest.kt
lib/jnidemo/app/src/main/: AndroidManifest.xml
lib/jnidemo/app/src/main/java/com/neoqee/jnidemo/: JniUtil.java  MainActivity.kt
lib/jnidemo/app/src/main/jni/: com_neoqee_jnidemo_JniUtil.h  native-lib.cpp
lib/jnidemo/app/src/test/java/com/neoqee/jnidemo/: ExampleUnitTest.kt
notes/: ASM学习.md  Android Studio快捷键.md  Android实现时间线效果.md  Android开发.md  Android控件.md  jni.md  kotlin.md  侨城安全管理平台.md  学习计划.md
(+199 files in other folders)
